# mekuri

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
lp/: biome.json  next-sitemap.config.js  package.json
lp/messages/: en.json  ja.json
lp/public/: robots.txt
lp/src/app/[locale]/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
lp/src/i18n/: request.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  lib.rs  main.rs
src/components/: Library.tsx  Viewer.tsx
src/hooks/: useComic.ts  useSettings.ts
src/lib/: tauri.ts
src/types/: index.ts
