[package]
name = "mekuri"
version = "0.2.0"
description = "A lightweight local comic/manga reader for macOS"
authors = ["piro"]
edition = "2021"

[lib]
name = "mekuri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
unrar = "0.5"
base64 = "0.22"
natord = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
